tests/NormalTests/paczka1/small_fuzzy/90707568.err
Error in line 2: jnbRAOlHJK A283 63,9
Error in line 6: t7n6lGqo0 A871 95,8
